@@ -198,6 +198,13 @@ bool wxShell(
     return (rc != 0);
 }
 
+// Shutdown or reboot the PC 
+bool wxShutdown(wxShutdownFlags wFlags)
+{
+    // TODO
+    return FALSE;
+}
+
 // Get free memory in bytes, or -1 if cannot determine amount (e.g. on UNIX)
 long wxGetFreeMemory()
 {
